# annooddities

./: LICENSE  README.md  pyproject.toml
src/annooddities/: __main__.py
