[project]
name = "AnnoOddities"
version = "0.1.0"
description = "AnnoOddities is a Python utility for detecting, identifying and characterising oddities in genome annotations"
readme = "README.md"
authors = [
    { name = "Gemy Kaithakottil", email = "Gemy.Kaithakottil@earlham.ac.uk" },
    { name = "David Swarbreck", email = "David.Swarbreck@earlham.ac.uk" },
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyfaidx>=0.5.9.5",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
]

[project.scripts]
annooddities = "annooddities.__main__:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
